--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,15 +28,15 @@ jobs:
           echo 'export PATH=/opt/apache-jmeter-5.6.3/bin:$PATH' >> ~/.bashrc
           source ~/.bashrc
       - name: Run JMeter Tests
-        run: /opt/apache-jmeter-5.6.3/bin/jmeter -n -t "JmeterAssignment/CredentialsView Results Tree.jmx" -l "results.jtl" -e -o "dashboard_reports"
+        run: /opt/apache-jmeter-5.6.3/bin/jmeter -n -t "JmeterAssignment/CredentialsView Results Tree.jmx" -l "results.jtl" -j "results.log" -e -o "dashboard_reports"
 
 
       - name: Upload JMeter Logs
         if: always()  # Ensure reports are uploaded even if tests fail
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: JMeter Logs
-          path: JmeterAssignment/logs
+          path: JmeterAssignment
          
 
 
