--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Upload JMeter Logs
         if: always()  # Ensure reports are uploaded even if tests fail
         uses: actions/upload-artifact@v4
+        overwrite: true
         with:
           name: JMeter Logs
           path: JmeterAssignment
